# test-github-actions

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: cmake.yml
